--- a/ERG3010 website/student_info.html
+++ b/ERG3010 website/student_info.html
@@ -40,12 +40,12 @@
             <a href="#">118010416@link.cuhk.edu.cn</a>
          </div>
          <div class="card" style="width: 18rem ;position: fixed; left: 450px; top:100px">
-            <img class="card-img-top" src="chelsea.png" alt="Card image cap">
+            <img class="card-img-top" src="cqddlf.jpg" alt="Card image cap">
             <div class="card-body">
             <h5 class="card-title">吴畏</h5>
-            <h6 class="card-title">118010xxx</h6>
-            <p class="card-text">question 1 <br> </p>
-            <a href="#">118010416@link.cuhk.edu.cn</a>
+            <h6 class="card-title">118010335</h6>
+            <p class="card-text">Database Construction <br>Further Question <br>Query Optimization </p>
+            <a href="#">118010335@link.cuhk.edu.cn</a>
          </div>
          <div class="card" style="width: 18rem ;position: fixed; left: 800px; top:100px">
             <img class="card-img-top" src="chelsea.png" alt="Card image cap">
